--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -3,8 +3,9 @@
     <%- partial('_partial/sidebar') %>
   <% } %>
 	<div id="footer-info" class="inner">
-	  &copy; <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %> 
-	  - Powered by <a href="http://hexo.io/" target="_blank">Hexo</a>
-	  - Theme <a href="https://github.com/Alex-fun/hexo-theme-jane/" target="_blank">Jane</a>
+	Linked with:&nbsp;&nbsp;&nbsp; 
+<a href="http://blog.shixbo.com" target="_blank">BOBO的博客</a>&nbsp;&nbsp;&nbsp;
+<a href="http://iosched.com" target="_blank">Rolandz的博客</a>&nbsp;&nbsp;&nbsp;
+<a href="http://mritd.me" target="_blank">mritd.me</a>&nbsp;&nbsp;&nbsp;
 	</div>
 </footer>
