--- a/layout/_partial/after-footer.ejs
+++ b/layout/_partial/after-footer.ejs
@@ -15,6 +15,25 @@
 <% } %>
 
 <script src="//cdn.bootcss.com/jquery/2.0.3/jquery.min.js"></script>
+<% if(theme.adv_fetch_url){ %>
+<script>
+  if(window.notIndexPage)
+  $(function(){
+    $.get('<%= theme.adv_fetch_url %>', function(res) {
+      if(res.data.length) {
+        $.each(res.data, function(idx, adv) {
+          if(idx == 0) {
+            if($('h2:first').length > 0) {
+              $(adv).insertBefore('h2:first');
+            }
+          }
+          $(adv).insertAfter('article');
+        });
+      }
+    });
+  });
+</script>
+<% } %>
 
 <% if (theme.fancybox){ %>
   <%- css('fancybox/jquery.fancybox') %>
