--- a/layout/_partial/after-footer.ejs
+++ b/layout/_partial/after-footer.ejs
@@ -25,6 +25,7 @@
           if(idx == 0) {
             if($('h2:first').length > 0) {
               $(adv).insertBefore('h2:first');
+              return;
             }
           }
           $(adv).insertAfter('article');
