1. ajust adv position;

--- a/layout/_partial/after-footer.ejs
+++ b/layout/_partial/after-footer.ejs
@@ -28,7 +28,7 @@
               return;
             }
           }
-          $(adv).insertAfter('article');
+          $(adv).insertAfter('.article-inner');
         });
       }
     });
