--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -8,7 +8,7 @@
     <% } %>
     <div class="article-meta">
       <%- partial('post/date', {class_name: 'article-date', date_format: null}) %>
-      <%- partial('post/category') %>
+      <%- partial('post/tag') %>
     </div>
     <div class="article-entry" itemprop="articleBody">
       <% if (post.excerpt && index){ %>
