--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -5,5 +5,6 @@
 	<div id="footer-info" class="inner">
 	Linked with:&nbsp;&nbsp;&nbsp; 
 	<a href="http://mritd.me" target="_blank">mritd.me</a>&nbsp;&nbsp;&nbsp;
+	<a href="https://www.mghio.cn" target="_blank">mghio's blog</a>&nbsp;&nbsp;&nbsp;
 	</div>
 </footer>
