--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -28,7 +28,7 @@
   <% if (theme.favicon){ %>
     <link rel="icon" href="<%- theme.favicon %>">
   <% } %>
-  <link href="//fonts.loli.net/css?family=Source+Code+Pro" rel="stylesheet" type="text/css">
+  <link href="//fonts.proxy.ustclug.org/css?family=Source+Code+Pro" rel="stylesheet" type="text/css">
   <%- css('css/style') %>
   <%- partial('google-analytics') %>
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
