add dong's blog link

--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -6,5 +6,6 @@
 	Linked with:&nbsp;&nbsp;&nbsp; 
 	<a href="http://mritd.me" target="_blank">mritd.me</a>&nbsp;&nbsp;&nbsp;
 	<a href="https://www.mghio.cn" target="_blank">mghio's blog</a>&nbsp;&nbsp;&nbsp;
+	<a href="https://sillydong.com" target="_blank">傻东の学习笔记</a>&nbsp;&nbsp;&nbsp;
 	</div>
 </footer>
