feat: add google adsense script

--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -32,6 +32,8 @@
   <link href="//fonts.geekzu.org/css?family=Source+Code+Pro" rel="stylesheet" type="text/css">
   <%- css('css/style') %>
   <%- partial('google-analytics') %>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8768699638326268"
+     crossorigin="anonymous"></script>
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <script>
     (adsbygoogle = window.adsbygoogle || []).push({
